2009-11-27  Werner Koch  <wk@g10code.com>

	* message-events.cpp (get_crypto_flags): Replace EECB arg by HWND.
	(OnRead): Pass HWND to get_crypto_flags. Change all callers.
	(get_inspector): Remove.
	(get_crypto_flags, OnReadComplete): Use get_inspector_from_hwnd.

	* oomhelp.h (IID_IOleWindow): Define.
	* inspectors.cpp (find_ole_window): New.
	(struct inspector_info_s): Add field HWND.
	(register_inspector): Store it..
	(get_inspector_from_hwnd): New.

	* common.h (DBG_OOM_EXTRA): New.
	* main.c (read_options): Read new debug flag.
	* eventsink.h (debug_oom_extra): Use it.

2009-11-03  Werner Koch  <wk@g10code.com>

	* inspectors.cpp (deregister_inspector): Delete the buttons.
	(set_one_button): New.
	(set_inspector_composer_flags): Also set toolbar buttons.
	(toggle_button): Use set_one_button.
	(get_button_by_instid_and_tag): Remove.

	* oomhelp.cpp (del_oom_button): New.

2009-11-02  Werner Koch  <wk@g10code.com>

	* mailitem.cpp, mailitem.h: New.

	* inspectors.cpp (get_message_from_button): New.
	(get_inspector_from_instid): New.
	(proc_inspector_button_click): Implement missing commands.

	* message.cpp (message_display_handler): Change to take an
	LPMESSAGE argument.
	* display.cpp (update_display): Replace the eecb arg by an
	inspector object.
	* message-events.cpp (OnReadComplete): Adjust for changes.

	* oomhelp.cpp (get_oom_iunknown): New.
	* revert.cpp (gpgol_folder_revert): Change to work without an eecb.

2009-10-30  Werner Koch  <wk@g10code.com>

	* oomhelp.cpp (get_oom_control_bytag): Fix silly bug.

	* inspectors.cpp (get_inspector_composer_flags): New.
	(set_inspector_composer_flags): New.
	* oomhelp.cpp (get_eecb_object): New.
	* message-events.cpp (get_inspector): New.
	(get_crypto_flags): New.
	(OnWrite, OnWriteComplete): Use new functions instead of the class
	members.  Use the new oom property functions.
	* ext-commands.cpp (get_inspector, get_crypto_flags): New.
	(DoCommand): Use new function.
	(set_crypto_flags): New.