@@ -1,3 +1,14 @@
+2009-11-30  Werner Koch  <wk@g10code.com>
+
+	* message-events.cpp (OnReadComplete): Use GetInspector if none was
+	found.
+	* display.cpp (update_display): Print the window hierarchy in case
+	of an error.
+	* ext-commands.cpp (get_inspector): Add arg HWND.  First try
+	get_inspector_from_hwnd.
+	(get_crypto_flags, set_crypto_flags): Add arg HWND.
+	(InstallCommands, DoCommand): Pass HWND to crypt_flags functions.
+
 2009-11-27  Werner Koch  <wk@g10code.com>
 
 	* message-events.cpp (get_crypto_flags): Replace EECB arg by HWND.
